Event handler now closure to preserve state between calls

--- a/test.html
+++ b/test.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="H:/projects/autocomplete/autocomplete.js"></script>
+        <script src="/home/isaac/projects/autocomplete-js/autocomplete.js"></script>
     <body>
         <textarea rows="10" cols="80" id="textbox"></textarea>
+        <textarea rows="10" cols="80" id="textbox2"></textarea>
         <button id="test" type="button">Test</button>
     </body>
 </html>
